Add custom menu

--- a/e3pro.cfg
+++ b/e3pro.cfg
@@ -55,7 +55,7 @@ position_endstop: 0.0
 position_max: 250
 
 [extruder]
-max_extrude_only_distance: 100.0
+max_extrude_only_distance: 300.0
 step_pin: PB4
 dir_pin: PB3
 enable_pin: !PC3
@@ -114,3 +114,23 @@ sclk_pin: PB13
 sid_pin: PB15
 encoder_pins: ^PB14, ^PB10
 click_pin: ^!PB2
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+  {% set speed = params.SPEED|default(500)|int %}
+  SAVE_GCODE_STATE NAME=__filament__load
+  M83
+  G1 E300 F{speed}
+  G1 E110 F500
+  G1 E-15 F500
+  RESTORE_GCODE_STATE NAME=__filament__load
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+  {% set speed = params.SPEED|default(500)|int %}
+  SAVE_GCODE_STATE NAME=__filament__load
+  M83
+  G1 E-300 F{speed}
+  G1 E-150 F{speed}
+
+  RESTORE_GCODE_STATE NAME=__filament__load
